--- a/LoadDB.ipynb
+++ b/LoadDB.ipynb
@@ -16,24 +16,16 @@
     "# Setting up dependency\n",
     "import pandas as pd\n",
     "import pymongo\n",
-    "import json"
+    "import json\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\reema\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:15: DeprecationWarning: remove is deprecated. Use delete_one or delete_many instead.\n",
-      "  from ipykernel import kernelapp as app\n",
-      "C:\\Users\\reema\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:17: DeprecationWarning: insert is deprecated. Use insert_one or insert_many instead.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def import_content(filepath):\n",
     "\n",
@@ -63,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,24 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\reema\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: DeprecationWarning: count is deprecated. Use estimated_document_count or count_documents instead. Please note that $where must be replaced by $expr, $near must be replaced by $geoWithin with $center, and $nearSphere must be replaced by $geoWithin with $centerSphere\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "67529"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,13 +87,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('5c9875fb8d5fac18505a4cec'),\n",
+       "{'_id': ObjectId('5c987f288d5fac577cd9f320'),\n",
        " 'company': 'google',\n",
        " 'dates': ' Dec 11, 2018',\n",
        " 'job-title': 'Current Employee - Anonymous Employee',\n",
@@ -121,7 +105,7 @@
        " 'management-stars': 5.0}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
